force-app/main/default/objects/ECP_PrintTemplate__c/ECP_PrintTemplate__c.object-meta.xml
<CustomObject>
    <label>テンプレート</label>
    <nameField>
        <displayFormat>PMSPT-{000000}</displayFormat>
        <label>印刷テンプレート管理番号</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>