force-app/main/default/objects/ECP_PrintTemplate__c/fields/JsonConfigVal__c.field-meta.xml
<CustomField>
    <fullName>JsonConfigVal__c</fullName>
    <label>テンプレート配置</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>