force-app/main/default/objects/ECP_PrintTemplate__c/fields/JsonDataVal__c.field-meta.xml
<CustomField>
    <fullName>JsonDataVal__c</fullName>
    <label>テンプレートテストデータ</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>