force-app/main/default/objects/ECP_PrintTemplate__c/fields/PaperHeight__c.field-meta.xml
<CustomField>
    <fullName>PaperHeight__c</fullName>
    <label>紙張高度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>