force-app/main/default/objects/ECP_PrintTemplate__c/fields/PaperOrient__c.field-meta.xml
<CustomField>
    <fullName>PaperOrient__c</fullName>
    <formula>IF( PaperHeight__c &gt;= PaperWidth__c,&quot;縦&quot;,
IF( PaperHeight__c &lt; PaperWidth__c,&quot;横&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>用紙の向き</label>
    <type>Text</type>
</CustomField>