force-app/main/default/objects/ECP_PrintTemplate__c/fields/PaperSize__c.field-meta.xml
<CustomField>
    <fullName>PaperSize__c</fullName>
    <label>用紙サイズ</label>
    <length>50</length>
    <type>Text</type>
</CustomField>