force-app/main/default/objects/ECP_PrintTemplate__c/fields/PaperType__c.field-meta.xml
<CustomField>
    <fullName>PaperType__c</fullName>
    <formula>IF( ISBLANK(PaperSize__c  ) ,&quot;&quot;,PaperSize__c  &amp;&quot; (h*w=&quot; + TEXT(PaperHeight__c ) &amp; &quot;mm*&quot; &amp; TEXT(PaperWidth__c) &amp; &quot;mm)&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>用紙タイプ</label>
    <type>Text</type>
</CustomField>