force-app/main/default/objects/ECP_PrintTemplate__c/fields/PaperWidth__c.field-meta.xml
<CustomField>
    <fullName>PaperWidth__c</fullName>
    <label>紙張寬度</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>