force-app/main/default/objects/ECP_PrintTemplate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TemplateName__c</columns>
    <columns>PaperType__c</columns>
    <columns>PaperOrient__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>